--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - conda info -a
   - conda install ipython nbconvert numpy scipy pyyaml matplotlib
   - "curl -H \"Authorization: token ${GH_TOKEN}\" -H 'Accept: application/vnd.github.v3.raw' -O --location \"https://api.github.com/repos/PGE323M/${ASSIGNMENT}/contents/test.py\""
+  - "curl -H \"Authorization: token ${GH_TOKEN}\" -H 'Accept: application/vnd.github.v3.raw' -O --location \"https://api.github.com/repos/PGE323M/${ASSIGNMENT}/contents/Nechelik_depth.dat\""
   - "curl -H \"Authorization: token ${GH_TOKEN}\" -H 'Accept: application/vnd.github.v3.raw' -O --location \"https://api.github.com/repos/PGE323M/${ASSIGNMENT}/contents/pressure_gold.npy\""
   - "curl -H \"Authorization: token ${GH_TOKEN}\" -H 'Accept: application/vnd.github.v3.raw' -O --location \"https://api.github.com/repos/PGE323M/${ASSIGNMENT}/contents/saturation_gold.npy\""
   - "curl -H \"Authorization: token ${GH_TOKEN}\" -H 'Accept: application/vnd.github.v3.raw' -O --location \"https://api.github.com/repos/PGE323M/${ASSIGNMENT}/contents/inputs.yml\""
